--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon ./src/index.ts",
     "start:once": "ts-node ./src/index.ts",
     "build": "tsc --project ./",
+    "ts:check": "npx tsc -p tsconfig.json --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint ./src --fix --ext .js,.jsx,.ts,.tsx"
